# loom

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  system_plan.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
crates/loom-cli/: Cargo.toml  build.rs
crates/loom-cli/src/: backend_registry.rs  main.rs  ui.rs
crates/loom-cli/src/commands/: build.rs  clean.rs  completions.rs  deps.rs  env.rs  ip.rs  lint.rs  list.rs  lsp.rs  migrate.rs  mod.rs  new.rs  registry.rs  report.rs  sim.rs  status.rs  watch.rs
crates/loom-core/: Cargo.toml
crates/loom-core/src/: error.rs  lib.rs  util.rs
crates/loom-core/src/assemble/: fileset.rs  mod.rs  ordering.rs  template.rs
crates/loom-core/src/generate/: cache.rs  dag.rs  execute.rs  mod.rs  node.rs  registry.rs
crates/loom-core/src/generate/plugins/: command.rs  python.rs
crates/loom-core/src/manifest/: common.rs  component.rs  generator.rs  mod.rs  platform.rs  project.rs  test.rs  workspace.rs
crates/loom-core/src/plugin/: backend.rs  generator.rs  mod.rs  reporter.rs  simulator.rs
crates/loom-core/src/resolve/: graph.rs  lockfile.rs  mod.rs  platform.rs  profile.rs  registry.rs  resolver.rs  workspace.rs
crates/loom-core/src/sim/: compat.rs  discovery.rs  mod.rs  runner.rs
crates/loom-icarus/: Cargo.toml
crates/loom-icarus/src/: env_check.rs  lib.rs
crates/loom-quartus/: Cargo.toml
crates/loom-quartus/src/: env_check.rs  executor.rs  generator.rs  lib.rs  tcl_gen.rs
crates/loom-questa/: Cargo.toml
crates/loom-questa/src/: env_check.rs  lib.rs
crates/loom-radiant/: Cargo.toml
crates/loom-radiant/src/: env_check.rs  executor.rs  lib.rs  tcl_gen.rs
crates/loom-vcs/: Cargo.toml
crates/loom-vcs/src/: env_check.rs  lib.rs
crates/loom-verilator/: Cargo.toml
crates/loom-verilator/src/: env_check.rs  lib.rs
crates/loom-vivado/: Cargo.toml
crates/loom-vivado/src/: env_check.rs  executor.rs  generator.rs  lib.rs  ooc.rs  tcl_gen.rs
crates/loom-xcelium/: Cargo.toml
crates/loom-xcelium/src/: env_check.rs  lib.rs
crates/loom-xsim/: Cargo.toml
crates/loom-xsim/src/: compile.rs  elaborate.rs  env_check.rs  lib.rs  simulate.rs
crates/loom-yosys/: Cargo.toml
crates/loom-yosys/src/: env_check.rs  lib.rs  output_parser.rs  pack.rs  pnr.rs  synth.rs
docs/: ARCHITECTURE.md
examples/basys3_uart/: README.md  workspace.toml
examples/basys3_uart/lib/clk_gen/: component.toml
examples/basys3_uart/lib/counter/: component.toml
examples/basys3_uart/lib/seg7_driver/: component.toml
examples/basys3_uart/lib/uart/: component.toml
examples/basys3_uart/projects/basys3_uart/: project.toml
examples/blinky/: README.md  workspace.toml
examples/blinky/lib/blinky/: component.toml
examples/blinky/projects/basys3_blinky/: project.toml
examples/dsp_pipe/: README.md  workspace.toml
examples/dsp_pipe/lib/dsp_common/: component.toml
examples/dsp_pipe/lib/fir_filter/: component.toml
examples/dsp_pipe/lib/gain_ctrl/: component.toml
examples/dsp_pipe/lib/window_func/: component.toml
examples/dsp_pipe/projects/arty_dsp_pipe/: project.toml
examples/regmap/: README.md  workspace.toml
examples/regmap/lib/regmap_core/: component.toml
examples/regmap/projects/gpio_timer/: project.toml
examples/sim_demo/: workspace.toml
examples/sim_demo/lib/alu/rtl/: alu.sv
examples/ucaspian/: LICENSES.md  README.md  workspace.toml
plans/: README.md
plans/phase-1/: 01-project-scaffold.md  02-manifest-component.md  03-manifest-project-workspace.md  04-workspace-discovery.md  05-dep-resolver.md  06-lockfile.md  07-fileset-assembly.md  08-plugin-traits.md  09-prebuilt-validation.md  10-vivado-tcl-gen.md  11-vivado-executor.md  12-vivado-env-check.md  13-error-types.md  14-cli-skeleton.md  15-cli-commands.md  README.md
plans/phase-2/: 01-generator-types.md  02-command-generator.md  03-cache-service.md  04-generator-dag.md  05-09-remaining.md  10-15-remaining.md  README.md
plans/phase-3/: README.md
plans/phase-4/: README.md
plans/phase-5/: README.md
plans/phase-6/: README.md
plans/phase-7/: README.md
python/: pyproject.toml
python/loom_plugin/: __init__.py  plugin.py  quartus_qsys.py  vivado_bd.py  vivado_ip.py
tests/fixtures/cycle_detection/: workspace.toml
tests/fixtures/multi_component/: workspace.toml
tests/fixtures/multi_project/: workspace.toml
tests/fixtures/simple_project/: workspace.toml
(+89 files in other folders)
