[workspace]
members = ["crates/loom-cli", "crates/loom-core", "crates/loom-vivado"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
walkdir = "2"
petgraph = "0.6"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
regex = "1"
colored = "2"
indicatif = "0.17"
quick-xml = "0.36"
