[workspace]
resolver = "2"
members = [
    "crates/loom-cli",
    "crates/loom-core",
    "crates/loom-quartus",
    "crates/loom-vivado",
    "crates/loom-xsim",
    "crates/loom-verilator",
    "crates/loom-yosys",
    "crates/loom-radiant",
    "crates/loom-icarus",
    "crates/loom-questa",
    "crates/loom-vcs",
    "crates/loom-xcelium",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/jptech/loom"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
glob = "0.3"
walkdir = "2"
petgraph = "0.6"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
notify = "6"
notify-debouncer-mini = "0.4"
tempfile = "3"
regex = "1"
colored = "2"
indicatif = "0.17"
quick-xml = "0.36"
ctrlc = "3"
