[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "loom-plugin-sdk"
version = "0.1.0"
description = "Python SDK for Loom FPGA build system generator plugins"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.entry-points."loom.plugins"]
# Plugins register here for auto-discovery

[tool.setuptools.packages.find]
include = ["loom_plugin*"]
