[package]
name = "loom-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
semver.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
glob.workspace = true
walkdir.workspace = true
petgraph.workspace = true
regex.workspace = true

[dev-dependencies]
tempfile.workspace = true
