[package]
name = "loom-vivado"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
loom-core = { path = "../loom-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
